  with a slash.

- Bug #1565661: in webbrowser, split() the command for the default
  GNOME browser in case it is a command with args.

- Bug #1569790: mailbox.py: Maildir.get_folder() and MH.get_folder()
  weren't passing the message factory on to newly created Maildir/MH
  objects.

- Bug #1575506: mailbox.py: Single-file mailboxes didn't re-lock
  properly in their flush() method.

- Patch #1514544: mailbox.py: Try to ensure that messages/indexes have
  been physically written to disk after calling .flush() or
  .close(). (Patch by David Watson.)

- Bug #1576241: fix functools.wraps() to work on built-in functions.

- Patch #1574068: fix urllib/urllib2 to not insert line breaks when
  HTTP authentication data was very long.

- Fix a bug in traceback.format_exception_only() that led to an error
  being raised when print_exc() was called without an exception set.
  In version 2.4, this printed "None", restored that behavior.

- Make webbrowser.BackgroundBrowser usable in Windows (it wasn't because
  the close_fds arg to subprocess.Popen is not supported).


Tools/Demos
-----------

- Patch #1552024: add decorator support to unparse.py demo script.


Tests
-----

- Remove passwd.adjunct.byname from list of maps
  for test_nis.


Build
-----

- Bug #1578513: Cross compilation was broken by a change to configure.
  Repair so that it's back to how it was in 2.4.3.

- Patch #1576954: Update VC6 build directory; remove redundant
  files in VC7.


What's New in Python 2.5 (final)
================================

*Release date: 19-SEP-2006*

No changes since release candidate 2.


What's New in Python 2.5 release candidate 2?
=============================================

*Release date: 12-SEP-2006*

Core and builtins
-----------------

- Make _PyGILState_NoteThreadState() static, it was not used anywhere
  outside of pystate.c and should not be necessary.

- Bug #1551432: Exceptions do not define an explicit __unicode__ method.  This